# propzy

./: .cursorrules  .dockerignore  .env.example  .env.prod.example  .gitignore  ANALISE-VIABILIDADE-EASYPANEL.md  ARQUIVOS_IMPORTANTES.md  COMECE_AQUI.md  COMO-RODAR-LOCAL.md  CORRECAO_ERRO_500_COMPLETA.md  CORRECAO_FINAL_ERRO_500.md  CORRECAO_PORTAINER_DB.md  CORRIGIR_BANCO_DADOS.md  CORRIGIR_ERRO_500.md  EASYPANEL-FIX-URGENT.md  EASYPANEL-README.md  PORTAINER_GIT_DEPLOY.md  PORTAINER_QUICKSTART.md  PORTAINER_STACK.txt  README.md  SECURITY_CHECKLIST.md  SECURITY_PENTESTING.md  SECURITY_SUMMARY.md  SOLUCAO_RAPIDA_BANCO.md  SSL_AUTOMATICO.md  docker-compose.prod.yml  manage.py  pyproject.toml  test_allowed_hosts.py  test_dynamic_hosts.py
.cursor/rules/: dev-instructions.mdc
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
apps/: __init__.py
apps/accounts/: adapter.py  admin.py  apps.py  forms.py  models.py  permissions.py  urls.py  views.py
apps/administration/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/core/: __init__.py  adapter.py  admin.py  apps.py  context_processors.py  forms.py  models.py  permissions.py  urls.py  utils.py  views.py
apps/infrastructure/: __init__.py  admin.py  apps.py  models.py  tasks.py  views.py
apps/landings/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  ssl_manager.py  tasks.py  theme_manager.py  urls.py  views.py
apps/main/: apps.py  urls.py  views.py
apps/properties/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/themes/: __init__.py  admin.py  apps.py  manager.py  models.py  views.py
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt
backend/.devcontainer/: devcontainer.json  start-all.sh
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/infra/: .gitkeep  README.md
config/: __init__.py  asgi.py  celery.py  dynamic_hosts.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  Dockerfile.nginx  Dockerfile.prod  docker-compose.yml  gunicorn_config.py  nginx_app.conf  nginx_proxy.conf  start.sh  supervisord.conf
docs/: .gitkeep  CORRECAO_URLS.md  DEPLOY.md  INSTALACAO_COMPLETA.md  LANDINGS_README.md  LIMPEZA_COMPLETA.md  PORTAINER_ENV_VARS.txt  QUICKSTART.md  README.md  REFATORACAO_COMPLETA.md  SECURITY_PENTESTING.md  SETUP_COMPLETO.md  START_HERE.md
docs/architecture/: ARCHITECTURE.md  README.md
docs/deployment/: APLICAR-MELHORIAS-VPS.md  DEPLOY.md  README.md
docs/guides/: README.md  SETUP-RESUMO.md
docs/security/: MELHORIAS-IMPLEMENTADAS.md  README.md
infra/: .env.example  .env.production.example  .gitkeep  docker-compose.dokploy.yml  docker-compose.easypanel-PRONTO.yml  docker-compose.easypanel.yml  docker-compose.yml
infra/dev/: docker-compose.dev.yml
infra/logs/: .gitkeep
infra/nginx/: Dockerfile  entrypoint.sh  nginx.conf
infra/scripts/: copy-certificates.sh  deploy-production.sh  entrypoint.sh  generate-certificate.sh  renew-certificates.sh  setup-completo.sh
monitoring/: prometheus-rules.yml  prometheus.yml
scripts/: backup.sh  deploy.sh  security_check.sh  setup_autoscaling.sh  setup_ssl_auto.sh
scripts/dev/: dev-logs.sh  dev-start.sh  dev-stop.sh
static/css/: authentication.css  base.css  components.css  main.css
static/img/: logo_ecopore.avif
static/js/: authentication.js  base.js
templates/: base.html  base_authentication.html
templates/account/: login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup_closed.html
templates/accounts/: group_confirm_delete.html  group_form.html  group_list.html  user_confirm_delete.html  user_form.html  user_list.html
templates/administration/: dashboard.html  group_form.html  (+5 more)
(+139 files in other folders)
